#14 Fixing button spacings

--- a/src/Components/Footer/FooterContactButtons/FooterContactButtons.module.css
+++ b/src/Components/Footer/FooterContactButtons/FooterContactButtons.module.css
@@ -2,3 +2,7 @@
   display: flex;
   flex-direction: column;
 }
+
+.ContactButton {
+  margin: 5px;
+}
